2001-10-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_build): only set stuff from
	the stockid if we don't have it set already.

	* samples/bonoboui/hello.c: finish re-write.

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_add_verb_list_with_data),
	(bonobo_ui_component_add_verb_list): constipate.

2001-10-20  Michael Meeks  <michael@ximian.com>

	* samples/bonoboui/hello.c: kill all redundant forward
	prototypes, substantialy re-write, clean the mess.
	Remove swathes of C++ style comments.

	* samples/bonoboui/Makefile.am: rewrite.

	* configure.in: update bonoboui-hello to bonoboui

2001-10-18  Michael Meeks  <michael@ximian.com>

	* samples/controls/bonobo-sample-controls.c
	(bonobo_entry_control_new): upd. for new param spec mappings.

2001-10-18  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-marshal.list (VOID): don't generate an ENUM
	marshaler.

	* bonobo/bonobo-ui-component.c (ui_event): dont use G_TYPE_ENUM
	it sucks. (bonobo_ui_component_add_listener_full): register the
	enum as an int.

2001-10-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-file-selector-util.c
	(run_file_slector): use g_getenv.

	* bonobo/bonobo-control.c
	(bonobo_control_x11_from_window_id): upd. sig.

2001-10-16  Michael Meeks  <michael@ximian.com>

	* tests/test-moniker.c (display_as_stream): split chunks
	into (dump_stream): here.
	(disp_stream_async_cb, display_as_stream_async): impl.

2001-10-10  Havoc Pennington  <hp@redhat.com>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_set_ui): fix docs to
	reflect that arg should be datadir not prefix
	(bonobo_ui_util_get_ui_fname): fix docs to reflect that arg should 
	be datadir not prefix

2001-10-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_get_ui_fname):
	update to allow absolute file name paths, and fall back to
	a straight prefix / file_name conflation.
	version gnome-2.0/ui
