@@ -1,5 +1,13 @@
 2001-10-20  Michael Meeks  <michael@ximian.com>
 
+	* bonobo/bonobo-control-frame.c (check_ambient_propbag):
+	don't do redundant set of toplevel property.
+
+	* samples/controls/bonobo-sample-controls.c
+	(bonobo_entry_control_new): fixup.
+
+2001-10-20  Michael Meeks  <michael@ximian.com>
+
 	* bonobo/bonobo-ui-sync-menu.c
 	(impl_bonobo_ui_sync_menu_build): only set stuff from
 	the stockid if we don't have it set already.
